--- a/scripts/b.ipynb
+++ b/scripts/b.ipynb
@@ -419,10 +419,10 @@
     "        y_min = f(X_min)\n",
     "        X_aug[X_dim+k] = X_min\n",
     "        y_aug[y_dim+k] = y_min\n",
-    "        #fs_list.append(fs)\n",
-    "        #mean_list.append(posterior_predictive['loc'].mean(dim=0))\n",
-    "        #var_list.append(posterior_predictive['var'].mean(dim=0))\n",
-    "        #min_list.append([X_min, y_min])\n",
+    "        fs_list.append(fs)\n",
+    "        mean_list.append(posterior_predictive['loc'].mean(dim=0))\n",
+    "        var_list.append(posterior_predictive['var'].mean(dim=0))\n",
+    "        min_list.append([X_min, y_min])\n",
     "    return mean_list, var_list, fs_list, min_list\n"
    ]
   },
