--- a/scripts/b.ipynb
+++ b/scripts/b.ipynb
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "posterior_predictive, posterior_samples = sample_predict(x2, gpr, mcmc)\n",
+    "posterior_predictive, posterior_samples = sample_predict(x, gpr, mcmc)\n",
     "posterior_locs = posterior_predictive['loc']\n",
     "posterior_vars = posterior_predictive['var']\n",
     "posterior_lengthscale = posterior_samples['kernel.lengthscale']\n",
