--- a/report/report.tex
+++ b/report/report.tex
@@ -67,7 +67,7 @@ pdfauthor={Christian D.~Troelsen, Jens Sørensen, Mathias Rasmussen}
 	\centering
 	\includegraphics[width = 0.5\textwidth]{figures/ppca/sample_vs_real}
 	\caption{Comparison of MNIST test set images and corresponding reconstructions sampled from the PPCA model}
-	\label{fig:ppca:mean_v_real}
+	\label{fig:ppca:sample_v_real}
 \end{figure}
 
 \footnote{A test}
