--- a/report/report.tex
+++ b/report/report.tex
@@ -70,6 +70,9 @@ pdfauthor={Christian D.~Troelsen, Jens Sørensen, Mathias Rasmussen}
 	\label{fig:ppca:sample_v_real}
 \end{figure}
 
+
+\input{metrics.tex}
+
 \footnote{A test}
 \citep{bishop2006pattern}
 \bibliographystyle{unsrtnat}
