--- a/report/metrics.tex
+++ b/report/metrics.tex
@@ -6,7 +6,9 @@
 \toprule
 {} &  \textbf{Mean Log Likelihood} &  \textbf{MSE} \\
 \midrule
-\textbf{PPCA} &                  -6661.043294 &   3620.035365 \\
+\textbf{VAE } &                   -138.723551 &      0.000305 \\
+\textbf{CVAE} &                   -151.654277 &      0.000352 \\
+\textbf{PPCA} &                  -1110.173882 &   3620.035365 \\
 \bottomrule
 \end{tabular}
 \end{table}
