--- a/report/report.tex
+++ b/report/report.tex
@@ -28,7 +28,7 @@
 \renewcommand{\headeright}{Report}
 \renewcommand{\undertitle}{Report}
 
-\renewcommand{\shorttitle}{PML report}
+\renewcommand{\shorttitle}{PML Report}
 
 %%% Add PDF metadata to help others organize their library
 %%% Once the PDF is generated, you can check the metadata with
@@ -44,32 +44,83 @@ pdfauthor={Christian D.~Troelsen, Jens Sørensen, Mathias Rasmussen}
 \section{Density modeling}
 \subsection{Implement a convolutional VAE}
 \subsection{Alternative models}
-\subsubsection{PPCA}
 \begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.5\textwidth]{figures/ppca/clustering}
-	\caption{Clustering on MNIST test (projection to latent space) using the trained PPCA model}
-	\label{fig:ppca:clustering}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.5\textwidth]{figures/ppca/interpolation}
-	\caption{Interpolating images from latent space variables using the trained PPCA model}
-	\label{fig:ppca:interpolation}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.5\textwidth]{figures/ppca/mean_vs_real}
+	\begin{subfigure}[t]{1\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/mean}
+		\caption{Mean parameters}
+		\label{fig:ppca:mean}
+	\end{subfigure}
+	\begin{subfigure}[t]{1\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/real}
+		\caption{Test set images}
+		\label{fig:ppca:real1}
+	\end{subfigure}
 	\caption{Comparison of MNIST test set images and corresponding mean parameters of the likelihood function in the trained PPCA model}
 	\label{fig:ppca:mean_v_real}
 \end{figure}
 \begin{figure}[H]
-	\centering
-	\includegraphics[width = 0.5\textwidth]{figures/ppca/sample_vs_real}
+	\begin{subfigure}[t]{1\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/sample}
+		\caption{Samples}
+		\label{fig:ppca:sample}
+	\end{subfigure}
+	\begin{subfigure}[t]{1\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/real}
+		\caption{Test set images}
+		\label{fig:ppca:real2}
+	\end{subfigure}
 	\caption{Comparison of MNIST test set images and corresponding reconstructions sampled from the PPCA model}
 	\label{fig:ppca:sample_v_real}
 \end{figure}
 
+
+\begin{figure}[H]
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/VAE/interpolation}
+		\caption{VAE}
+		\label{fig:vae:interpolation}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/CVAE/interpolation}
+		\caption{CVAE}
+		\label{fig:cvae:interpolation}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/interpolation}
+		\caption{PPCA}
+		\label{fig:ppca:interpolation}
+	\end{subfigure}
+	\caption{Interpolating images from latent space variables using trained density models}	
+\end{figure}
+
+\begin{figure}[H]
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/VAE/clustering}
+		\caption{VAE}
+		\label{fig:vae:clustering}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/CVAE/clustering}
+		\caption{CVAE}
+		\label{fig:cvae:clustering}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.49\textwidth}
+		\centering
+		\includegraphics[width = 0.8\textwidth]{figures/ppca/clustering}
+		\caption{PPCA}
+		\label{fig:ppca:clustering}
+	\end{subfigure}
+	\caption{Clustering on MNIST test (projection to latent space) using trained density models}	
+\end{figure}
 
 \input{metrics.tex}
 
