--- a/report/metrics.tex
+++ b/report/metrics.tex
@@ -4,11 +4,11 @@
 \label{table:metrics}
 \begin{tabular}{ccc}
 \toprule
-{} &  \textbf{Mean Log Likelihood} &  \textbf{MSE} \\
+{} &  \textbf{Log-Likelihood/ELBO} &  \textbf{MSE} \\
 \midrule
-\textbf{VAE } &                   -138.723551 &      0.000305 \\
-\textbf{CVAE} &                   -151.654277 &      0.000352 \\
-\textbf{PPCA} &                  -1110.173882 &   3620.035365 \\
+\textbf{VAE } &                   -145.122048 &      0.000305 \\
+\textbf{CVAE} &                   -157.241749 &      0.000352 \\
+\textbf{PPCA} &                  -4329.655559 &   3620.035365 \\
 \bottomrule
 \end{tabular}
 \end{table}
