--- a/scripts/code.ipynb
+++ b/scripts/code.ipynb
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "PPCA                  -4329.655559   3620.035365"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,18 +1158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "to_latex() got an unexpected keyword argument 'escape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_13228\\2609972012.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlatex_caption\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'Model performance metrics'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlatex_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'table:metrics'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m df.style.to_latex(latex_path, caption=latex_caption, \n\u001b[0m\u001b[0;32m      6\u001b[0m             label=latex_label, escape=False, column_format='ccc', bold_rows=True)\n",
-      "\u001b[1;31mTypeError\u001b[0m: to_latex() got an unexpected keyword argument 'escape'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jacki\\AppData\\Local\\Temp\\ipykernel_13228\\1507802807.py:5: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "  df.to_latex(latex_path, caption=latex_caption,\n"
      ]
     }
    ],
@@ -1178,7 +1175,7 @@
     "os.makedirs(os.path.dirname(latex_path), exist_ok=True)\n",
     "latex_caption = 'Model performance metrics'\n",
     "latex_label = 'table:metrics'\n",
-    "df.style.to_latex(latex_path, caption=latex_caption, \n",
+    "df.to_latex(latex_path, caption=latex_caption, \n",
     "            label=latex_label, escape=False, column_format='ccc', bold_rows=True)\n"
    ]
   }
