--- a/scripts/code.ipynb
+++ b/scripts/code.ipynb
@@ -15,6 +15,7 @@
     "import torch.utils.data\n",
     "from torch import nn, optim\n",
     "from torch.nn import functional as F\n",
+    "from torch.distributions import MultivariateNormal\n",
     "from torchvision import datasets, transforms\n",
     "from torchvision.utils import save_image\n",
     "from IPython.display import clear_output\n",
@@ -822,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.distributions import Normal, MultivariateNormal\n",
+    "\n",
     "z_cov = sig_sq * M_matrix_inv\n",
     "#z_cov = (1/sig_sq) * M_matrix\n",
     "z_dist = MultivariateNormal(z_loc.T, z_cov)\n",
@@ -1058,14 +1059,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_mean_determ = z_loc.T @ W.T + mu\n",
-    "from torch.nn.functional import mse_loss\n",
-    "\n",
-    "ppca_mse = mse_loss(x_mean_determ, test_vec)"
+    "ppca_mse = torch.nn.functional.mse_loss(x_mean, test_vec, reduction = \"mean\")"
    ]
   },
   {
@@ -1078,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1118,7 @@
        "    <tr>\n",
        "      <th>PPCA</th>\n",
        "      <td>-4329.655559</td>\n",
-       "      <td>3620.035365</td>\n",
+       "      <td>3629.099862</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1130,10 +1128,10 @@
        "      \\textbf{Log-Likelihood/ELBO}  \\textbf{MSE}\n",
        "VAE                    -145.122048      0.000305\n",
        "CVAE                   -157.241749      0.000352\n",
-       "PPCA                  -4329.655559   3620.035365"
+       "PPCA                  -4329.655559   3629.099862"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
