update report structure

--- a/report/report.tex
+++ b/report/report.tex
@@ -45,7 +45,10 @@ pdfauthor={Christian D.~Troelsen, Jens Sørensen, Mathias Rasmussen}
 \subsection{Implement a convolutional VAE}
 \input{sections/A1.tex}
 \subsection{Alternative models}
-\input{sections/A2.tex}
+\subsubsection{Probabilistic PCA}
+\input{sections/A21.tex}
+\subsubsection{Gaussian Mixture Model}
+\input{sections/A22.tex}
 \input{sections/A.tex}
 \section{Function fitting}
 \subsection{Fitting a GP with Pyro}
