--- a/report/references.bib
+++ b/report/references.bib
@@ -6,3 +6,13 @@
   year      = {2006},
   publisher = {Springer}
 }
+@article{kingma2019introduction,
+  title     = {An introduction to variational autoencoders},
+  author    = {Kingma, Diederik P and Welling, Max and others},
+  journal   = {Foundations and Trends{\textregistered} in Machine Learning},
+  volume    = {12},
+  number    = {4},
+  pages     = {307--392},
+  year      = {2019},
+  publisher = {Now Publishers, Inc.}
+}
