use torch.mse to compute gmm mse and visualize mean parameters given x

--- a/report/metrics.tex
+++ b/report/metrics.tex
@@ -6,9 +6,10 @@
 \toprule
 {} &  \textbf{Log-Likelihood/ELBO} &  \textbf{MSE} \\
 \midrule
-\textbf{VAE } &                   -142.813448 &      0.037524 \\
-\textbf{CVAE} &                   -156.987707 &      0.044402 \\
-\textbf{PPCA} &                  -4329.655762 &   3629.250732 \\
+\textbf{VAE } &                 -1.428134e+02 &      0.037524 \\
+\textbf{CVAE} &                 -1.568176e+02 &      0.044254 \\
+\textbf{PPCA} &                 -4.329656e+03 &   3629.250732 \\
+\textbf{GMM } &                 -1.067011e+07 &   3831.718461 \\
 \bottomrule
 \end{tabular}
 \end{table}
