update report a bit

--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -19,7 +19,7 @@
 \usepackage[hang]{footmisc}
 
 %\usepackage[nofoot, left=2.20cm, bottom=1.5cm, right=2.20cm, top=2.5cm]{geometry}
-\usepackage{parskip} % automatic line breaks
+%\usepackage{parskip} % automatic line breaks
 \usepackage{enumitem}
 \usepackage{subcaption}
 \usepackage{tabularx}
