--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -17,7 +17,7 @@
 %%%%%%%LAYOUT%%%%%%%%%%%%%%%%%%%%%%%%
 %\usepackage{a4wide}
 \usepackage[hang]{footmisc}
-
+\usepackage[toc,page]{appendix}
 %\usepackage[nofoot, left=2.20cm, bottom=1.5cm, right=2.20cm, top=2.5cm]{geometry}
 %\usepackage{parskip} % automatic line breaks
 \usepackage{enumitem}
