--- a/report/report.tex
+++ b/report/report.tex
@@ -56,7 +56,10 @@ pdfauthor={Christian D.~Troelsen, Jens Sørensen, Mathias Rasmussen}
 \subsection{Bayesian Optimization}
 \input{sections/B2.tex}
 \input{sections/B.tex}
+
 \bibliographystyle{unsrtnat}
 \bibliography{references.bib}
-
+\begin{appendices}
+\input{sections/appendices.tex}
+\end{appendices}
 \end{document}
