--- a/report/sections/A21.tex
+++ b/report/sections/A21.tex
@@ -6,4 +6,4 @@ The existence of a closed-form expression for the likelihood function is useful,
 Perhaps the most obvious disadvantage of the PPCA model is that it is based on a linear-gaussian framework and hence, unlike the VAE, may not be able to capture complex non-linear structure in the data it is trained on. On another note, it is worth pointing out that the maximum-likelihood solution to the PPCA model only determines the latent space up to an arbitrary rotation $\bm{R}$. We shall for simplicity set $\bm{R} = \bm{I}$. Moreover, we shall use $M=2$ principal components, so that we may easily compare the latent space of the PPCA model with that of the previously introduced VAE models.
 
 \paragraph{Model performance}
-We assess whether the PPCA model is better or worse than the original VAE by using the same quantitative measures and quality experiments used to compare the CVAE with the VAE in the previous section. For the MSE loss we compare images $\bm{x}_i$ from the MNIST test set with corresponding mean parameter values $\bm{\eta}_i$ obtained by first mapping each $\bm{x}_i$ to a posterior distribution $p(\bm{z}_i|\bm{x}_i) = \mathcal{N}\lr{\bm{z}| \text{proj}\lr{\bm{x}_i}, \sigma^2 \bm{M}^{-1}}$,where  $\text{proj}(\bm{x}_i) = \bm{M}^{-1} \bm{W}^T\lr{\bm{x}_i - \bm{\mu}}$ and $\bm{M} = \bm{W}^{T}\bm{W} + \sigma^2 \bm{I}$ ,then sampling a $\bm{z}_i$ from this distribution, and finally computing $\bm{\eta}(\bm{x}_i) = \bm{W}\bm{z}_i + \bm{\mu}_i$. This same procedure is used for the reconstruction experiment, though in this case we compare select $\bm{x}_i$ and corrresponding $\bm{\eta}_i$ visually. For the clustering experiment, we reuse the projection  $\text{proj}\lr{\bm{x}_i}$ to map each sample $\bm{x}_i$ to its corresponding mean parameter in latent space. Symmetrically, for the exploration of latent space we use reuse the back-projection $\bm{\eta}(\bm{x}_i)$ for mapping the deterministically sampled latent variables $\bm{z}_i$ to corresponding mean parameters that are subsequently represented as images.
+We assess whether the PPCA model is better or worse than the original VAE by using the same quantitative measures and qualitative experiments used to compare the CVAE with the VAE. For the MSE loss we compare images $\bm{x}_i$ from the MNIST test set with corresponding mean parameter values $\bm{\eta}_i$ obtained by first mapping each $\bm{x}_i$ to a posterior distribution $p(\bm{z}_i|\bm{x}_i) = \mathcal{N}\lr{\bm{z}| \text{proj}\lr{\bm{x}_i}, \sigma^2 \bm{M}^{-1}}$,where  $\text{proj}(\bm{x}_i) = \bm{M}^{-1} \bm{W}^T\lr{\bm{x}_i - \bm{\mu}}$ and $\bm{M} = \bm{W}^{T}\bm{W} + \sigma^2 \bm{I}$ ,then sampling a $\bm{z}_i$ from this distribution, and finally computing $\bm{\eta}(\bm{z}_i) = \bm{W}\bm{z}_i + \bm{\mu}_i$. This same procedure is used for the reconstruction experiment, though in this case we compare select $\bm{x}_i$ and corrresponding $\bm{\eta}_i$ visually. For the clustering experiment, we reuse the projection  $\text{proj}\lr{\bm{x}_i}$ to map each sample $\bm{x}_i$ to its corresponding mean parameter in latent space. Symmetrically, for the exploration of latent space we use reuse the back-projection $\bm{\eta}(\bm{z}_i)$ for mapping the deterministically sampled latent variables $\bm{z}_i$ to corresponding mean parameters that are subsequently represented as images.
