finish first draft of PPCA section

--- a/report/sections/A21.tex
+++ b/report/sections/A21.tex
@@ -6,4 +6,8 @@ The existence of a closed-form expression for the likelihood function is useful,
 Perhaps the most obvious disadvantage of the PPCA model is that it is based on a linear-gaussian framework and hence, unlike the VAE, may not be able to capture complex non-linear structure in the data it is trained on. On another note, it is worth pointing out that the maximum-likelihood solution to the PPCA model only determines the latent space up to an arbitrary rotation $\bm{R}$. We shall for simplicity set $\bm{R} = \bm{I}$. Moreover, we shall use $M=2$ principal components, so that we may easily compare the latent space of the PPCA model with that of the previously introduced VAE models.
 
 \paragraph{Model performance}
-We assess whether the PPCA model is better or worse than the original VAE by using the same quantitative measures and qualitative experiments used to compare the CVAE with the VAE. For the MSE loss we compare images $\bm{x}_i$ from the MNIST test set with corresponding mean parameter values $\bm{\eta}_i$ obtained by first mapping each $\bm{x}_i$ to a posterior distribution $p(\bm{z}_i|\bm{x}_i) = \mathcal{N}\lr{\bm{z}| \text{proj}\lr{\bm{x}_i}, \sigma^2 \bm{M}^{-1}}$,where  $\text{proj}(\bm{x}_i) = \bm{M}^{-1} \bm{W}^T\lr{\bm{x}_i - \bm{\mu}}$ and $\bm{M} = \bm{W}^{T}\bm{W} + \sigma^2 \bm{I}$ ,then sampling a $\bm{z}_i$ from this distribution, and finally computing $\bm{\eta}(\bm{z}_i) = \bm{W}\bm{z}_i + \bm{\mu}_i$. This same procedure is used for the reconstruction experiment, though in this case we compare select $\bm{x}_i$ and corrresponding $\bm{\eta}_i$ visually. For the clustering experiment, we reuse the projection  $\text{proj}\lr{\bm{x}_i}$ to map each sample $\bm{x}_i$ to its corresponding mean parameter in latent space. Symmetrically, for the exploration of latent space we use reuse the back-projection $\bm{\eta}(\bm{z}_i)$ for mapping the deterministically sampled latent variables $\bm{z}_i$ to corresponding mean parameters that are subsequently represented as images.
+We assess whether the PPCA model is better or worse than the original VAE by using the same quantitative measures and qualitative experiments used to compare the CVAE with the VAE\@. For the MSE loss we compare images $\bm{x}_i$ from the MNIST test set with corresponding mean parameter values $\bm{\eta}_i$ obtained by first mapping each $\bm{x}_i$ to a posterior distribution $p(\bm{z}_i|\bm{x}_i) = \mathcal{N}\lr{\bm{z}| \text{proj}\lr{\bm{x}_i}, \sigma^2 \bm{M}^{-1}}$,where  $\text{proj}(\bm{x}_i) = \bm{M}^{-1} \bm{W}^T\lr{\bm{x}_i - \bm{\mu}}$ and $\bm{M} = \bm{W}^{T}\bm{W} + \sigma^2 \bm{I}$ ,then sampling a $\bm{z}_i$ from this distribution, and finally computing $\bm{\eta}(\bm{z}_i) = \bm{W}\bm{z}_i + \bm{\mu}_i$. This same procedure is used for the reconstruction experiment, though in this case we compare select $\bm{x}_i$ and corrresponding $\bm{\eta}_i$ visually. For the clustering experiment, we reuse the projection  $\text{proj}\lr{\bm{x}_i}$ to map each sample $\bm{x}_i$ to its corresponding mean parameter in latent space. Symmetrically, for the exploration of latent space we use reuse the back-projection $\bm{\eta}(\bm{z}_i)$ for mapping the deterministically sampled latent variables $\bm{z}_i$ to corresponding mean parameters that are subsequently represented as images.
+
+As can be seen in \cref{table:metrics}, the sample-wise log likelihood of the PPCA model is abysmally low compared to that of the original VAE\@. One explanation why the metric is so low may be that the MNIST is rather large. Hence, even with a modest average probability $p(\bm{x}_i | \bm{W}, \bm{u}, \sigma^2)$ of each sample $\bm{x}_i$ in the MNIST test-set, we still may end up with a very small total likelihood $p(\bm{X}|\bm{W}, \bm{u}, \sigma^2 ) = \prod_{i}^{N}p(\bm{x}_i | \bm{W}, \bm{u}, \sigma^2)$. On the other hand, considering the fact that the MSE of the PPCA is also abysmally low compared to that of the original VAE, it seems likely that the PPCA model has neither learned to model the underlying distribution of the MNIST dataset nor to reconstruct it samples accurately. This conjecture is supported by the qualitative experiments. Based on \cref{fig:ppca:clustering}, one may infer that the PPCA model has not learned to separate samples in latent space based on labels very well. In particular, it seems only capable of separating samples with labels that are either 1 or 0. The exploration of latent space shown in \cref{fig:ppca:interpolation} seem to further solidity the idea that the PPCA model has not learned a proper representation of other digits than 1, 0 and perhaps 9. Similarly, the reconstructions in \cref{fig:ppca:mean} are very bad, with only 0 and 1 being somewhat accurately reconstructed.
+
+Why the PPCA model performs so much worse than the original VAE is most likely due to its aforementioned linear components, which are not capable of capturing the non-linear nature of the MNIST dataset. On the other hand, because the VAE utilizes components such as ReLU activation functions, it can more easily model the complexities of the MNIST dataset. The PPCA model might also perform poorly due to the fact that the samples from the MNIST dataset are very high dimensional and may not necessarily lie on a low-dimensional manifold, which a latent space based on $2$ principal components assumes. In general, a very low likelihood may be expected when dealing with data that is as high-dimensional as the samples from the MNIST dataset. 
