--- a/report/sections/A.tex
+++ b/report/sections/A.tex
@@ -36,13 +36,13 @@
 \begin{figure}[!h]
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
-		\includegraphics[width = 1\textwidth]{figures/VAE/interpolation}
+		\includegraphics[width = 1\textwidth]{figures/vae/interpolation}
 		\caption{VAE}
 		\label{fig:vae:interpolation}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
-		\includegraphics[width = 1\textwidth]{figures/CVAE/interpolation}
+		\includegraphics[width = 1\textwidth]{figures/cvae/interpolation}
 		\caption{CVAE}
 		\label{fig:cvae:interpolation}
 	\end{subfigure}
@@ -64,13 +64,13 @@
 \begin{figure}[!h]
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
-		\includegraphics[width = 1\textwidth]{figures/VAE/clustering}
+		\includegraphics[width = 1\textwidth]{figures/vae/clustering}
 		\caption{VAE}
 		\label{fig:vae:clustering}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
-		\includegraphics[width = 1\textwidth]{figures/CVAE/clustering}
+		\includegraphics[width = 1\textwidth]{figures/cvae/clustering}
 		\caption{CVAE}
 		\label{fig:cvae:clustering}
 	\end{subfigure}
