new run of code.ipynb

--- a/report/metrics.tex
+++ b/report/metrics.tex
@@ -1,4 +1,4 @@
-\begin{table}[!h]
+\begin{table}
 \centering
 \caption{Model performance metrics}
 \label{table:metrics}
@@ -6,10 +6,10 @@
 \toprule
 {} &  \textbf{Log-Likelihood/ELBO} &  \textbf{MSE} \\
 \midrule
-\textbf{VAE } &                 -1.428134e+02 &      0.037524 \\
-\textbf{CVAE} &                 -1.568176e+02 &      0.044254 \\
-\textbf{PPCA} &                 -4.329656e+03 &   3629.250732 \\
-\textbf{GMM } &                 -1.067011e+07 &   3831.718461 \\
+\textbf{VAE } &                 -1.423560e+02 &      0.037337 \\
+\textbf{CVAE} &                 -1.569538e+02 &      0.044316 \\
+\textbf{PPCA} &                 -4.329655e+03 &      0.055813 \\
+\textbf{GMM } &                 -5.235191e+06 &      0.059119 \\
 \bottomrule
 \end{tabular}
 \end{table}
