typeset performance metrics nicely

--- a/report/sections/A.tex
+++ b/report/sections/A.tex
@@ -42,10 +42,10 @@
 		\toprule
 		{} &  \textbf{Log-Likelihood/ELBO} &  \textbf{MSE} \\
 		\midrule
-		\textbf{VAE } &                 -1.428134e+02 &      0.037524 \\
-		\textbf{CVAE} &                 -1.570527e+02 &      0.044375 \\
-		\textbf{PPCA} &                 -4.329656e+03 &      0.055813 \\
-		\textbf{GMM } &                 -1.066433e+07 &      0.058932 \\
+		\textbf{VAE } &                 \num{-1.428134e+02} &      \num{0.037524} \\
+		\textbf{CVAE} &                 \num{-1.570527e+02} &      \num{0.044375} \\
+		\textbf{PPCA} &                 \num{-4.329656e+03} &      \num{0.055813} \\
+		\textbf{GMM } &                 \num{-1.066433e+07} &      \num{0.058932} \\
 		\bottomrule
 		\end{tabular}
 		
